tamplate in application

--- a/Django/teplate_learning/templates/first/first_template.html
+++ b/Django/teplate_learning/templates/first/first_template.html
@@ -6,6 +6,6 @@
     <title>Hello Tushar</title>
 </head>
 <body>
-    <h1>hello tushar, my name is tushar and you are my friend</h1>
+    <h1>hello tushar, my name is tushar and you are my {{fname}}</h1>
 </body>
 </html>
