form basic information

--- a/Django/admin_pannel/first_app/templates/enroll/userregistration.html
+++ b/Django/admin_pannel/first_app/templates/enroll/userregistration.html
@@ -8,7 +8,7 @@
 <body>
     <form action="">
         <table>
-            {{forms}}
+            {{forms.as_p}}
         </table>
         <input type="submit" value="Submit">
     </form>
