--- a/revision of jango/firstproject/first_app/templates/hello/html.html
+++ b/revision of jango/firstproject/first_app/templates/hello/html.html
@@ -1,3 +1,4 @@
+{% load static tailwind_tags %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -5,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    {% tailwind_css %}
 </head>
 <body>
     <h1>hello world</h1>
